--- a/Space Invaders/Levels/Level_0.html
+++ b/Space Invaders/Levels/Level_0.html
@@ -161,5 +161,22 @@
         <LINE>11110000001111</LINE>
         <LINE>11100000000111</LINE>
     </CHARACTER>
+    <CHARACTER>
+        <NAME>JAIDENMEIDEN</NAME>
+        <POSITION>
+            <X>-2.0</X>
+            <Y>-4.5</Y>
+            <Z>0.0</Z>
+        </POSITION>
+        <SPEED>
+            <X>0.001</X>	<!--in units per second for each navy ship-->
+            <Y>0.0</Y>
+            <Z>0.0</Z>
+        </SPEED>
+        <HEALTH>7</HEALTH>
+        <WEIGHT>100</WEIGHT>
+        <FUEL>100</FUEL>
+        <AUTOMATICWEAPONS>7</AUTOMATICWEAPONS>
+    </CHARACTER>
 </BODY>
 </HTML>
