--- a/Space Invaders/configuration/Initialization.html
+++ b/Space Invaders/configuration/Initialization.html
@@ -134,6 +134,7 @@
             <COLLIDED>LASER</COLLIDED>
             <COLLIDED>PLAYER</COLLIDED>
             <COLLIDED>REACTOR</COLLIDED>
+            <COLLIDED>JAIDENMEIDEN</COLLIDED>
         </COLLISION>
 
         <COLLISION>
@@ -145,6 +146,7 @@
             <COLLIDED>SHOOT</COLLIDED>
             <COLLIDED>SHIP</COLLIDED>
             <COLLIDED>SUPPLYSHIP</COLLIDED>
+            <COLLIDED>JAIDENMEIDEN</COLLIDED>
         </COLLISION>
 
         <COLLISION>
@@ -156,6 +158,7 @@
             <COLLIDED>SHOOT</COLLIDED>
             <COLLIDED>SHIP</COLLIDED>
             <COLLIDED>SUPPLYSHIP</COLLIDED>
+            <COLLIDED>JAIDENMEIDEN</COLLIDED>
         </COLLISION>
         
         <COLLISION>
@@ -166,6 +169,18 @@
             <COLLIDED>PLAYER</COLLIDED>
             <COLLIDED>REACTOR</COLLIDED>
             <COLLIDED>SHOOT</COLLIDED>
+            <COLLIDED>JAIDENMEIDEN</COLLIDED>
+        </COLLISION>
+
+        <COLLISION>
+            <CHARACTER>JAIDENMEIDEN</CHARACTER>
+            <COLLIDED>BRICK</COLLIDED>
+            <COLLIDED>BUNKER</COLLIDED>
+            <COLLIDED>LASER</COLLIDED>
+            <COLLIDED>PLAYER</COLLIDED>
+            <COLLIDED>REACTOR</COLLIDED>
+            <COLLIDED>SHOOT</COLLIDED>
+            <COLLIDED>SUPPLYSHIP</COLLIDED>
         </COLLISION>
 
         <COLLISION>
@@ -213,6 +228,7 @@
             <COLLIDED>REACTOR</COLLIDED>
             <COLLIDED>SHIP</COLLIDED>
             <COLLIDED>SUPPLYSHIP</COLLIDED>
+            <COLLIDED>JAIDENMEIDEN</COLLIDED>
         </COLLISION>
         
         <COLLISION>
@@ -223,6 +239,7 @@
             <COLLIDED>PLAYER</COLLIDED>
             <COLLIDED>REACTOR</COLLIDED>
             <COLLIDED>SHOOT</COLLIDED>
+            <COLLIDED>JAIDENMEIDEN</COLLIDED>
         </COLLISION>
 
         <COLLISION>
@@ -233,6 +250,7 @@
             <COLLIDED>PLAYER</COLLIDED>
             <COLLIDED>REACTOR</COLLIDED>
             <COLLIDED>SHOOT</COLLIDED>
+            <COLLIDED>JAIDENMEIDEN</COLLIDED>
         </COLLISION>
 </COLLISION_TABLE>
 
